--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,26 +10,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.8
+  
+  # Core Firebase (essential)
   firebase_core: ^2.24.0
   firebase_auth: ^4.14.0
-  cloud_firestore: ^4.13.0
-  firebase_storage: ^11.5.0
-  sms_autofill: ^2.3.0
-  cupertino_icons: ^1.0.8
   
   # State Management
   get: ^4.6.6
-  
-  # Image and File Handling
-  image_picker: ^1.0.4
-  image: ^4.1.3
-  
-  # Location Services
-  geolocator: ^10.1.0
-  geocoding: ^2.1.1
-  
-  # Date and Time
-  intl: ^0.18.1
   
   # UI Components
   flutter_svg: ^2.0.9
@@ -37,25 +25,28 @@ dependencies:
   
   # Utilities
   path: ^1.8.3
-  permission_handler: ^11.0.1
-  connectivity_plus: ^5.0.2
   shared_preferences: ^2.2.2
+  intl: ^0.18.1
   
-  # Analytics and Monitoring
-  firebase_analytics: ^10.7.4
-  firebase_crashlytics: ^3.4.8
+  # Location Services
+  geolocator: ^10.1.0
+  geocoding: ^2.1.1
+  permission_handler: ^11.0.1
+  
+  # Firebase Firestore
+  cloud_firestore: ^4.13.0
+  
+  # Image Picker
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^5.0.0
 
-
-
 flutter:
-
-  
   uses-material-design: true
+
+
 
  
